# rsuname_rs

./: Cargo.toml  README.md  build.rs
src/: cli.rs  lib.rs  main.rs
src/console/: all.rs  hardware_platform.rs  kernel_name.rs  kernel_release.rs  kernel_version.rs  machine.rs  mod.rs  nodename.rs  operating_system.rs  processor.rs
